--- a/userChrome.css
+++ b/userChrome.css
@@ -2,10 +2,10 @@
 
 #main-window {
     -moz-appearance:none !important;
-    margin-top: -2px !important;
+    margin-top: 0px !important;
     margin-bottom: -1px !important;
     margin-left:-1px !important;
-    margin-right: -7px !important;
+    margin-right: 0px !important;
     background: transparent !important;
     background-image: none !important;
 }
@@ -75,6 +75,11 @@ tab[selected="true"] .tab-text {
     min-height: 17px !important;
     background: #1B1B1B !important;
     color: #B2A779 !important;
+}
+
+.urlbar-history-dropmarker,
+#go-button {
+    display: none !important;
 }
 
 #nav-bar {
